# Upload-dio

./: .gitignore  README.md  main.py  pyproject.toml
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx
client/src/api/: apiClient.ts  auth.ts
client/src/components/: AppSidebar.tsx  BucketPreviewCard.tsx  CreateBucket.tsx  Header.tsx  Loader.tsx
client/src/hooks/: Theme.tsx
client/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx
client/src/pages/: NotFound.tsx
client/src/pages/auth/: Login.tsx
client/src/pages/dashboard/: BucketsPreview.tsx  (+1 more)
config/: db.py
models/: __init__.py  admin.py  bucket_config.py  fastapi_settings.py
models/bucket_config_models/: aws_model.py  cloudflare_model.py  cloudinary_models.py  extras.py  imagekit_model.py
server/: .env.example  .gitignore  main.py  pyproject.toml
server/src/config/: db.py  settings.py
server/src/helpers/file_upload/: __init__.py  _config_validation.py  _memetype_validation.py  _save_files.py
server/src/models/: bucket.py
server/src/routers/: admin.py  dashboard.py  file_upload.py
server/src/schemas/: bucket.py  error_response.py  success_response.py
server/src/services/: aws_client.py
server/src/utils/: admin.py  image_processer.py
services/: __init__.py  cloudinary.py
settings/: env_provider.py
src/routers/admin/: router.py
src/routers/dashboard/: router.py
src/routers/image_upload/: router.py
src/routes/: auth.py  dashboard.py  image_upload.py
src/utils/: get_admin.py  process_image.py  settings.py
templates/: index.html
templates/pages/: login.html
(+3 files in other folders)
