[project]
name = "image-uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "boto3>=1.43.14",
    "fastapi[standard]>=0.136.1",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "wand>=0.7.1",
]
