[project]
name = "image-uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "wand>=0.7.1",
]
