[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
    "wand>=0.7.1",
]
